--- a/OrchardSkills.OrchardCore.TheCleanBlogTheme/Views/Layout.cshtml
+++ b/OrchardSkills.OrchardCore.TheCleanBlogTheme/Views/Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="@Orchard.CultureName()">
 <head>
     <meta charset="utf-8" />
@@ -29,7 +29,7 @@
     <script asp-name="TheCleanBlogTheme-vendor-bootstrap-bundle" at="Foot" version="4.3.1"></script>
 
     <!-- Custom scripts for this template -->
-    <script asp-src="~/TheCleanBlogTheme/js/clean-blog.min.js" debug-src="~/TheCleanBlogTheme/js/clean-blog.jss" at="Foot"></script>
+    <script asp-src="~/TheCleanBlogTheme/js/clean-blog.min.js" debug-src="~/TheCleanBlogTheme/js/clean-blog.js" at="Foot"></script>
 
     <script asp-src="~/OrchardCore.Menu/Scripts/activate-links.min.js" debug-src="~/OrchardCore.Menu/Scripts/activate-links.js" at="Foot"></script>
 
@@ -41,7 +41,7 @@
     <resources type="HeadScript" />
 </head>
 <body dir="@Orchard.CultureDir()">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="~/#">@Site.SiteName</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" aria-label="Toggle navigation">
