Added Taxonomy, Tags and blog image to summary

--- a/OrchardSkills.OrchardCore.TheCleanBlogTheme/Views/Blog-ListPart.liquid
+++ b/OrchardSkills.OrchardCore.TheCleanBlogTheme/Views/Blog-ListPart.liquid
@@ -1,5 +1,6 @@
 {% for item in Model.ContentItems %}
     {{ item | shape_build_display: "Summary" | shape_render }}
+    {{ item | console_log }}
 {% endfor %}
 
 {% assign previousText = "← Newer Posts" | t %}
